--- a/tests/tools/mock-agent/scenarios/codex_file_creation.yaml
+++ b/tests/tools/mock-agent/scenarios/codex_file_creation.yaml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: codex_file_creation
+initialPrompt: "Create a test.txt file with content for Codex file creation"
 repo:
   init: true
 timeline:
