--- a/tests/tools/mock-agent/scenarios/feature_implementation_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/feature_implementation_scenario.yaml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: feature_implementation_scenario
+initialPrompt: "Create a test.txt file with test content"
 repo:
   init: true
 timeline:
