--- a/crates/llm-api-proxy/Cargo.toml
+++ b/crates/llm-api-proxy/Cargo.toml
@@ -24,6 +24,7 @@ reqwest = { version = "0.12", features = [
 ] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "request-id"] }
+hyper = "1.0"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -51,6 +52,7 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 regex = "1.10"
 base64 = "0.22"
 chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.0", features = ["derive"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
