--- a/tests/tools/mock-agent/scenarios/code_refactoring_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/code_refactoring_scenario.yaml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: code_refactoring_scenario
+initialPrompt: "Refactor the code to improve its structure"
 repo:
   init: true
 timeline:
