--- a/tests/tools/mock-agent/scenarios/testing_workflow_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/testing_workflow_scenario.yaml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: testing_workflow_scenario
+initialPrompt: "Test the workflow functionality"
 repo:
   init: true
 timeline:
