--- a/tests/tools/mock-agent/scenarios/timing_test_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/timing_test_scenario.yaml
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: timing_test_scenario
+initialPrompt: "Test timing functionality"
 repo:
   init: true
 timeline:
