--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -8,11 +8,6 @@ edition = "2021"
 description = "Agent Harbor CLI - Main command-line interface"
 license = "MIT OR Apache-2.0"
 
-[features]
-default = ["zfs", "btrfs"]
-zfs = []
-btrfs = []
-
 [[bin]]
 name = "ah"
 path = "src/main.rs"
@@ -80,6 +75,7 @@ vt100 = "0.15"
 crossterm = { workspace = true }
 tempfile = { workspace = true }
 dirs = "5.0"
+ureq = "2.9"
 
 # Platform-specific dependencies
 [target.'cfg(unix)'.dependencies]
