--- a/crates/ah-repo/Cargo.toml
+++ b/crates/ah-repo/Cargo.toml
@@ -16,5 +16,12 @@ futures = "0.3"
 
 [dev-dependencies]
 tempfile = "3.0"
-tokio = { version = "1.0", features = ["rt", "macros", "process", "io-util", "rt-multi-thread", "test-util"] }
+tokio = { version = "1.0", features = [
+  "rt",
+  "macros",
+  "process",
+  "io-util",
+  "rt-multi-thread",
+  "test-util",
+] }
 futures = "0.3"
