--- a/crates/llm-api-proxy/Cargo.toml
+++ b/crates/llm-api-proxy/Cargo.toml
@@ -11,7 +11,14 @@ publish = false
 # Core async and HTTP
 tokio = { version = "1.0", features = ["full"] }
 axum = "0.8"
-reqwest = { version = "0.12", features = ["json", "stream", "multipart", "native-tls", "charset", "gzip"] }
+reqwest = { version = "0.12", features = [
+  "json",
+  "stream",
+  "multipart",
+  "native-tls",
+  "charset",
+  "gzip",
+] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "request-id"] }
 
