feat(scripts/lint-specs): Make Mermaid validation optional via `CHECK_MERMAID` env var

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ on:
   pull_request:
     branches: [main, linux-sandbox]
 
+env:
+  CHECK_MERMAID: ${{ vars.CHECK_MERMAID }}
+
 jobs:
   lint:
     runs-on: [self-hosted, nixos, x86-64-v3]
