--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -11,7 +11,9 @@ thiserror = "1.0"
 tokio = { workspace = true, features = ["process", "io-util"] }
 regex = "1.0"
 serde = { workspace = true, features = ["derive"] }
+serde_json = "1.0"
 async-trait = "0.1"
+tempfile = "3.0"
 
 [features]
 default = ["tmux"]
@@ -20,6 +22,12 @@ kitty = []
 wezterm = []
 zellij = []
 screen = []
+ghostty = []
+tilix = []
+windows-terminal = []
+vim = []
+neovim = []
+emacs = []
 
 [dev-dependencies]
 tokio-test = "0.4"
@@ -28,3 +36,4 @@ futures-lite = "1.13"
 vt100 = "0.15"
 insta = { version = "1.40", features = ["json"] }
 anyhow = "1.0"
+serde_json = "1.0"
