--- a/crates/ah-agents/Cargo.toml
+++ b/crates/ah-agents/Cargo.toml
@@ -25,6 +25,7 @@ dirs = "5.0"
 regex = "1.10"
 chrono = "0.4"
 ureq = "2.9"
+reqwest = { workspace = true, features = ["json"] }
 
 # Platform-specific credential management
 [target.'cfg(target_os = "macos")'.dependencies]
