--- a/tests/tools/mock-agent/scenarios/interactive_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/interactive_scenario.yaml
@@ -1,3 +1,6 @@
+# Copyright 2025 Schelling Point Labs Inc
+# SPDX-License-Identifier: AGPL-3.0-only
+
 name: interactive_scenario
 initialPrompt: "Hello! I'm ready to help you with coding tasks. What would you like to work on?"
 repo:
