--- a/crates/ah-config-types/Cargo.toml
+++ b/crates/ah-config-types/Cargo.toml
@@ -5,7 +5,7 @@
 name = "ah-config-types"
 version = "0.1.0"
 edition = "2021"
-description = "Distributed, strongly-typed configuration structs for Agents Workflow modules"
+description = "Distributed, strongly-typed configuration structs for Agent Harbor modules"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
