--- a/crates/ah-fs-snapshots-zfs/Cargo.toml
+++ b/crates/ah-fs-snapshots-zfs/Cargo.toml
@@ -5,7 +5,7 @@
 name = "ah-fs-snapshots-zfs"
 version = "0.1.0"
 edition = "2021"
-description = "ZFS snapshot provider implementation for Agents Workflow"
+description = "ZFS snapshot provider implementation for Agent Harbor"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
