--- a/apps/macos/AgentHarbor/AgentHarbor/Info.plist
+++ b/apps/macos/AgentHarbor/AgentHarbor/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2025 Agents Workflow. All rights reserved.</string>
+	<string>Copyright © 2025 Agent Harbor. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
