--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -5,7 +5,7 @@
 name = "ah-cli"
 version = "0.1.0"
 edition = "2021"
-description = "Agents Workflow CLI - Main command-line interface"
+description = "Agent Harbor CLI - Main command-line interface"
 license = "MIT OR Apache-2.0"
 
 [features]
