--- a/crates/ah-sandbox-linux/Cargo.toml
+++ b/crates/ah-sandbox-linux/Cargo.toml
@@ -5,7 +5,7 @@
 name = "ah-sandbox-linux"
 version = "0.1.0"
 edition = "2021"
-description = "Linux-specific sandbox implementation for Agents Workflow"
+description = "Linux-specific sandbox implementation for Agent Harbor"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
