--- a/crates/ah-sandbox-macos/Cargo.toml
+++ b/crates/ah-sandbox-macos/Cargo.toml
@@ -6,7 +6,7 @@ name = "ah-sandbox-macos"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
-description = "macOS Seatbelt (SBPL) builder and libsandbox FFI for Agents Workflow"
+description = "macOS Seatbelt (SBPL) builder and libsandbox FFI for Agent Harbor"
 
 [lib]
 name = "ah_sandbox_macos"
