fix(just-mitm): Initialize the CA certificates before launching the target program; Successful tests with Claude

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ legacy/ruby/test/logs/
 .rubocop-cache/
 .pre-commit-config.yaml
 
+# Man-in-the-middle proxy dumps
+.mitmproxy/
+
 # Spell check cache
 .cspellcache
 .lycheecache
