--- a/crates/agentfs-interpose-shim/Cargo.toml
+++ b/crates/agentfs-interpose-shim/Cargo.toml
@@ -19,6 +19,7 @@ libc = "0.2"
 ethereum_ssz = "0.8"
 ethereum_ssz_derive = "0.8"
 hex = "0.4"
+redhook = "2.0"
 agentfs-proto = { path = "../agentfs-proto" }
 tempfile = "3"
 agentfs-core = { path = "../agentfs-core", optional = true }
