--- a/crates/agentfs-core/Cargo.toml
+++ b/crates/agentfs-core/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 libc = { workspace = true }
 hex = { workspace = true }
+agentfs-proto = { path = "../agentfs-proto" }
 
 [dev-dependencies]
 tempfile = { workspace = true }
