--- a/crates/agentfs-proto/Cargo.toml
+++ b/crates/agentfs-proto/Cargo.toml
@@ -13,7 +13,7 @@ lazy_static = "1.4"
 # SSZ serialization (matching ah-fs-snapshots-daemon)
 ethereum_ssz = "0.8"
 ethereum_ssz_derive = "0.8"
-agentfs-core = { path = "../agentfs-core" }
+libc = "0.2"
 
 [dev-dependencies]
 tempfile = { workspace = true }
