--- a/crates/ah-rest-client/Cargo.toml
+++ b/crates/ah-rest-client/Cargo.toml
@@ -11,6 +11,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 ah-rest-api-contract = { path = "../ah-rest-api-contract" }
 ah-client-api = { path = "../ah-client-api" }
+ah-domain-types = { path = "../ah-domain-types" }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { version = "0.12", default-features = false, features = [
   "json",
