--- a/crates/ah-tui/Cargo.toml
+++ b/crates/ah-tui/Cargo.toml
@@ -43,6 +43,7 @@ chrono = { version = "0.4", features = ["serde"] }
 async-trait = "0.1"
 unic-langid = "0.9"
 ctrlc = "3.4"
+uuid = { version = "1.0", features = ["v4"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
