--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -41,6 +41,7 @@ ah-fs-snapshots-git = { path = "../ah-fs-snapshots-git" }
 chrono = { workspace = true, features = ["serde"] }
 reqwest = { workspace = true, features = ["json"] }
 uuid = { workspace = true, features = ["v4"] }
+rusqlite = { version = "0.37", features = ["bundled"] }
 sandbox-core = { path = "../sandbox-core", features = [
   "cgroups",
   "seccomp",
