feat(mac/AgentFS/FsEvents): Foundations for implementing the file system monitoring APIs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ members = [
   "tests/vm-enforcement",
   "crates/agentfs-interpose-shim",
   "crates/agentfs-interpose-e2e-tests",
+  "crates/agentfs-daemon",
 ]
 exclude = ["vendor", "PoC"]
 resolver = "2"
