--- a/crates/agentfs-daemon/Cargo.toml
+++ b/crates/agentfs-daemon/Cargo.toml
@@ -6,15 +6,23 @@ name = "agentfs-daemon"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "agentfs-daemon"
+path = "src/main.rs"
+
 [dependencies]
 agentfs-core = { path = "../agentfs-core" }
 agentfs-proto = { path = "../agentfs-proto" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-anyhow = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 libc = { workspace = true }
+# SSZ serialization (matching proto crate)
+ssz = { package = "ethereum_ssz", version = "0.8" }
+ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
+anyhow = "1.0"
 tokio = { version = "1.0", features = [
   "net",
   "io-util",
