feat(mac/AgentFS/FsEvents): Delivery of FsEvents to the shim through a custom CFMessagePort

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ rusqlite = { version = "0.37", features = ["bundled"] }
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+log = "0.4"
 
 # Error handling
 anyhow = "1.0"
