--- a/crates/agentfs-interpose-e2e-tests/Cargo.toml
+++ b/crates/agentfs-interpose-e2e-tests/Cargo.toml
@@ -12,6 +12,10 @@ tempfile = "3.8"
 libc = "0.2"
 ssz = { package = "ethereum_ssz", version = "0.8" }
 ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
+core-foundation = "0.10"
+core-foundation-sys = "0.8"
+fsevent-sys = "5.1"
+unicode-normalization = "0.1"
 
 [dependencies.agentfs-proto]
 path = "../agentfs-proto"
