--- a/crates/agentfs-daemon/Cargo.toml
+++ b/crates/agentfs-daemon/Cargo.toml
@@ -29,3 +29,6 @@ tokio = { version = "1.0", features = [
 ] }
 ssz = { package = "ethereum_ssz", version = "0.8" }
 ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
+core-foundation = "0.10"
+core-foundation-sys = "0.8"
+scopeguard = "1.2"
