--- a/crates/agentfs-backstore-macos/Cargo.toml
+++ b/crates/agentfs-backstore-macos/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+agentfs-core = { path = "../agentfs-core" }
+tempfile = "3.0"
+proptest = { version = "1.0", optional = true }
+
+[dev-dependencies]
+proptest = "1.0"
