--- a/crates/agentfs-backstore-macos/Cargo.toml
+++ b/crates/agentfs-backstore-macos/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 agentfs-core = { path = "../agentfs-core" }
 tempfile = "3.0"
 proptest = { version = "1.0", optional = true }
+libc = "0.2"
 
 [dev-dependencies]
 proptest = "1.0"
+criterion = "0.5"
