--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -84,6 +84,7 @@
     "vite": "^7.1.9",
     "vite-plugin-checker": "^0.11.0",
     "vite-plugin-solid": "^2.11.9",
+    "vite-plugin-solid-svg": "^0.8.1",
     "vitest": "^3.2.4"
   },
   "engines": {
